webbook/internal/webook-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      #外部访问端口,必须在3000-32767
      nodePort: 31379
      #k8s内部访问端口
      port: 6379
      #pod暴露的端口
      targetPort: 6379
  type: NodePort
